@@ -83,7 +83,6 @@ Being::~Being()
 {
     std::for_each(mSprites.begin(), mSprites.end(), make_dtor(mSprites));
     clearPath();
-    setMap(NULL);
 
     for (   std::list<Particle *>::iterator i = mChildParticleEffects.begin();
             i != mChildParticleEffects.end();
@@ -91,6 +90,8 @@ Being::~Being()
     {
         (*i)->kill();
     }
+
+    setMap(NULL);
 
     instances--;
 
