@@ -1,6 +1,11 @@
 2007-12-28  Philipp Sehmisch  <tmw@crushnet.org>
 
 	* data/maps/new_3-1.tmx: Some mapping errors fixed by Zipon.
+	* src/being.cpp, src/monster.cpp, src/resources/monsterinfo.cpp, 
+	src/resources/monsterinfo.h: Added the possibility to assign particle
+	effects to monsters in the monster database.
+	* data/monsters.xml: Added flame particle effect to fire goblin as a
+	proof of concept.
 
 2007-12-26  Bjørn Lindeijer  <bjorn@lindeijer.nl>
 
